--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -1,7 +1,10 @@
 <html>
 <head>
+	<script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
+	<script src="https://api.trello.com/1/client.js?key={{ trello_api_key }}"></script>
 </head>
 <body>
+	<div id="message">{{ message }}</div>
 	<a href="/trello_authorise">Authorise with Trello</a>
 </body>
 </html>
