work in progress

--- a/src/client/views/trello.html
+++ b/src/client/views/trello.html
@@ -1,8 +1,5 @@
 <html>
-<head>
-	<script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
-	<script src="https://api.trello.com/1/client.js?key={{ trello_api_key }}"></script>
-</head>
+{{> _header}}
 <body>
 	Redirecting to Trello..
 	<script>
