New views, using swig templating library.

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -1,8 +1,7 @@
-<html>
-{{> _header}}
-<body>
+{% extends 'layouts/default.html' %}
+
+{% block content %}
 	<h1>{{ app_name }}</h1>
 	<div id="message">{{ message }}</div>
 	<a href="/trello_authorise">Authorise with Trello</a>
-</body>
-</html>
+{% endblock %}
