Rewritten watch API using bookshelf models.

--- a/src/client/views/layouts/default.html
+++ b/src/client/views/layouts/default.html
@@ -6,8 +6,9 @@
         <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
         <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
         <link rel="stylesheet" href="/css/layout.css">
-        <script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
-        <script src="https://api.trello.com/1/client.js?key={{ trello_api_key }}"></script>
+        <script src="//code.jquery.com/jquery-1.7.1.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+        <script src="//api.trello.com/1/client.js?key={{ trello_api_key }}"></script>
     </head>
     <body>
         <nav>
