--- a/src/client/views/profile.html
+++ b/src/client/views/profile.html
@@ -16,7 +16,57 @@
                 </p>
             </div>
         </div>
-
+        <div class="col-sm-6">
+            <ul id="watch_list"></ul>
+        </div>
+    </div>
+    <div class="row">
+        <form action="" method="">
+            <div class="form-group">
+                <label>Activation code</label>
+                <input id="activation_code" type="text" class="form-control" name="activation" placeholder="8 character code">
+            </div>
+            <button id="register_watch" type="submit" class="btn btn-warning btn-lg">Register Watch</button>
+        </form>
     </div>
 </div>
+<script>
+    var refreshWatches = function() {
+        $.ajax({
+            url:'/api/watches',
+            success: function(watches) {
+                _.each(watches, function(watch) {
+                    $("#watch_list").append('<li>' + watch['type'] + ': ' + watch['created_at'] + ' active: ' + watch['active'] + " " + JSON.stringify(watch) + '</li>');
+                });
+            },
+            error: function(data) {
+                console.log(data.responseText);
+            }
+        });
+    }
+
+    $(document).ready(function() {
+
+        refreshWatches();
+
+        $('#register_watch').on('click', function(event) {
+            $.ajax({
+                url:'/api/watches',
+                type: 'POST',
+                data: JSON.stringify({
+                    activation_code: $('#activation_code').val()
+                }),
+                success: function(data) {
+                    refreshWatches();
+                },
+                error: function(data) {
+                    console.log(data.responseText);
+                },
+                contentType: "application/json",
+                dataType: 'json'
+            });
+            event.preventDefault();
+        });
+    });
+</script>
 {% endblock %}
