New Trello authorisation flow. Only 1 trello token object per user maintained. Trello can be bound to user account at any time.

--- a/src/client/views/layouts/default.html
+++ b/src/client/views/layouts/default.html
@@ -16,6 +16,7 @@
                 <li><a href="/">Home</a></li>
                 {% if isAuthenticated %}
                     <li><a href="/home">My Home</a></li>
+                    <li><a href="/trello_authorise">Authorise with Trello</a></li>
                     <li><a href="/logout">Logout</a></li>
                 {% else %}
                     <li><a href="/login">Login</a></li>
