--- a/src/client/views/profile.html
+++ b/src/client/views/profile.html
@@ -66,15 +66,13 @@
             url: '/api/trello_token',
             type: 'GET',
             contentType: "application/json",
-            dataType: 'json',
-            success: function(data) {
-                $("#trello").empty();
-                $("#trello").append('<div>' + JSON.stringify(data) + '</div>');
-            },
-            error: function(err) {
-                $("#trello").empty();
-                console.log(err);
-            }
+            dataType: 'json'
+        }).done(function(data) {
+            $("#trello").empty();
+            $("#trello").append('<div>' + JSON.stringify(data) + '</div>');
+        }).fail(function(jqXHR, textStatus) {
+            $("#trello").empty();
+            console.log(textStatus);
         });
     }
 
@@ -105,13 +103,11 @@
         $('#trello_delete').on('click', function(event) {
             $.ajax({
                 url:'/api/trello_token',
-                type: 'DELETE',
-                success: function(data) {
-                    refreshTrello();
-                },
-                error: function(err) {
-                    console.log(err);
-                }
+                type: 'DELETE'
+            }).done(function(data) {
+                refreshTrello();
+            }).fail(function(jqXHR, textStatus){
+                console.log(textStatus);
             });
         });
     });
