--- a/src/client/views/layouts/default.html
+++ b/src/client/views/layouts/default.html
@@ -5,10 +5,11 @@
         <title>Garminello</title>
         <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
         <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
-        <link rel="stylesheet" href="/css/layout.css">
-        <script src="//code.jquery.com/jquery-1.7.1.min.js"></script>
+        <link rel="stylesheet" href="/static/stylesheets/garminello.css">
+        <script src="//code.jquery.com/jquery-2.2.4.min.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
         <script src="//api.trello.com/1/client.js?key={{ trello_api_key }}"></script>
+        <script src="/static/javascripts/garminello.js"></script>
     </head>
     <body>
         <nav>
