--- a/src/client/views/layouts/default.html
+++ b/src/client/views/layouts/default.html
@@ -6,10 +6,10 @@
         <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
         <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
         <link rel="stylesheet" href="/static/stylesheets/garminello.css">
-        <script src="//code.jquery.com/jquery-2.2.4.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
-        <script src="//api.trello.com/1/client.js?key={{ trello_api_key }}"></script>
-        <script src="/static/javascripts/garminello.js"></script>
+        {% block scripts %}
+        {% endblock %}
     </head>
     <body>
         <nav>
