--- a/src/client/templates/trello_authorise.html
+++ b/src/client/templates/trello_authorise.html
@@ -5,7 +5,10 @@
 {% endblock %}
 
 {% block content %}
-	Redirecting to Trello..
+    <div class="row">
+		<p>Redirecting to Trello..</p>
+	</div>
+
 	<script>
 		var authenticationSuccess = function() {
 			console.log('Auth successful');
