--- a/src/client/less/index.less
+++ b/src/client/less/index.less
@@ -1,3 +1,8 @@
 body {
-  background-color: DarkOliveGreen;
+  background-color: rgb(162, 216, 192);
+}
+
+.watch-container img {
+	height: 128px;
+	width: 128px;
 }
