--- a/src/client/templates/login.html
+++ b/src/client/templates/login.html
@@ -1,13 +1,9 @@
 {% extends 'layouts/default.html' %}
 
 {% block content %}
-<div class="container">
-
-	<h1>{{ app_name }}</h1>
-
+<div class="row">
     <div class="col-sm-6 col-sm-offset-3">
 
-		<div class="alert alert-danger" id="message">{{ message }}</div>
 	    <form action="/login" method="post">
 	        <div class="form-group">
 	            <label>Email</label>
