--- a/src/client/templates/index.html
+++ b/src/client/templates/index.html
@@ -7,18 +7,24 @@
 		<h3>Trello on your Garmin device</h3>
     </div>
 
-    <div class="row">
-        <div class="col-sm-3">
+    <div class="row benefits">
+        <div class="col-sm-6">
         	<h4>Access all your Trello boards on Garmin devices</h4>
+            <img src="/static/images/trello_boards.png"/>
+            <img src="/static/images/select_board.png"/>
         </div>
-        <div class="col-sm-3">
+        <div class="col-sm-6">
         	<h4>Offline access to last viewed board</h4>
+            <img src="/static/images/long_descriptions.png"/>
         </div>
-        <div class="col-sm-3">
+        <div class="col-sm-6">
         	<h4>Todo or shopping lists made easy</h4>
+            <img src="/static/images/shopping_list.png"/>
         </div>
-        <div class="col-sm-3">
+        <div class="col-sm-6">
         	<h4>Create workouts or other sequences and play them back on your Garmin device</h4>
+            <img src="/static/images/trello_workout.png"/>
+            <img src="/static/images/playback.png"/>
         </div>
     </div>
 </div>
