Visuals for index page

--- a/src/client/less/index.less
+++ b/src/client/less/index.less
@@ -1,10 +1,40 @@
 body {
-  background-color: rgb(162, 216, 192);
+  /*background-color: rgb(162, 216, 192);*/
+  background-color: white;
+}
+
+a {
+	color: #00436a;
+}
+
+h1, h3 {
+	color: #00436a;
+}
+
+nav {
+	float: left;
+	margin-top: 20px;
+	clear: both;
+	font-size: 1.5em;
+}
+
+nav ul {
+	list-style: none;
+}
+
+nav ul > li {
+	float: left;
+	display: list-item;
+	margin-left: 20px;
 }
 
 .watch-container img {
 	height: 128px;
 	width: 128px;
+}
+
+.benefits {
+	margin-bottom: 20px;
 }
 
 .benefits img {
