--- a/src/client/templates/signup.html
+++ b/src/client/templates/signup.html
@@ -4,7 +4,7 @@
 <div class="row">
     <div class="col-sm-6 col-sm-offset-3">
 
-        <h1><span class="fa fa-sign-in"></span> Signup</h1>
+        <h1><span class="fa fa-sign-in"></span> Sign up</h1>
 
         <form action="/register" method="post">
             <div class="form-group">
@@ -19,7 +19,7 @@
                 <label>Validate Password</label>
                 <input id="validate_password" type="password" class="form-control" name="vpw"/>
             </div>
-            <button type="submit" class="btn btn-warning btn-lg">Register</button>
+            <button type="submit" class="btn btn-warning btn-lg">Sign up</button>
         </form>
 
         <hr>
