--- a/src/client/templates/login.html
+++ b/src/client/templates/login.html
@@ -18,7 +18,7 @@
 
         <hr>
 
-	    <p>Need an account? <a href="/register">Register</a></p>
+	    <p>Need an account? <a href="/register">Sign up</a></p>
 	</div>
 </div>
 {% endblock %}
